<resources>
    <string name="app_name">Media Player</string>
    <string name="song_list">song list</string>
    <string name="anterior"><![CDATA[|<]]></string>
    <string name="regresarPoco"><![CDATA[<<]]></string>
    <string name="pausePlay">||</string>
    <string name="adelantarPoco"><![CDATA[>>]]></string>
    <string name="siguiente"><![CDATA[>|]]></string>
    <string name="titulo">Titulo</string>
    <string name="mediaPlayer">Media Player</string>
    <string name="infoApp">Acerca de la App</string>
    <string name="img">imagen</string>
    <string name="vid">video</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
